[project]
name = "cg-controller"
description = "A control panel that shows all widgets from selected nodes. A whole new way to interact with Comfy!"
version = "1.7"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/chrisgoringe/cg-controller"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "chrisgoringe"
DisplayName = "cg-controller"
Icon = ""
